[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowforge"
version = "0.5.0"
description = "Lightweight durable workflow execution for Python backends"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["workflow", "orchestration", "durable", "execution", "backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # No hard runtime deps — psycopg2 is optional (see below)
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
mysql = [
    "sqlalchemy>=2.0",
    "mysql-connector-python>=8.0",
]
dev = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=8.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
flowforge = "flowforge.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowforge*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "integration: requires a running Postgres instance (via docker-compose)",
]

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
